Fixed horizontal overflow. (#4)

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -14,6 +14,7 @@ body {
   align-items: center;
   background: blue url("/images/Screenshot_13.png") no-repeat fixed center;
   background-size: cover;
+  overflow-x: hidden;
 }
 #navigation {
   width: 100%;
